# pipeline-utils-rs

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile_Build  LICENSE  config.toml  justfile  pyproject.toml  temp.fasta  test.fasta
docs/: README.md  book.toml  index.html
docs/superpowers/specs/: 2026-07-08-filter-by-kmer-design.md
new_test_data/align-trim/: output.fasta  query.fasta  ref.fasta
new_test_data/filter-by-kmer/: test_in.fasta
new_test_data/filter-by-length/: test_in.fasta
new_test_data/get_mindist_seq/: input.fasta
new_test_data/kmer-trim/: output.fasta  query.fasta
new_test_data/translate/: input.fasta  output.fasta
src/: cli.rs  lib.rs  main.rs  python.rs
src/tools/: align_and_trim.rs  collapse.rs  expand.rs  extract_seq_from_gb.rs  filter_by_kmer.rs  filter_by_length.rs  filter_by_name.rs  gb_extract.rs  get_consensus.rs  get_mindist_seq.rs  kmer_trim.rs  mod.rs  pairwise_align_to_ref.rs  pairwise_align_trim.rs  process_miniprot.rs  replace_ambiguities.rs  reverse_translate.rs  strip_gap_cols.rs  translate.rs  trim_after_stop_codon.rs  trim_query_to_ref.rs  trim_sam.rs  trim_seqs_to_query.rs
src/utils/: codon_tables.rs  fasta_utils.rs  mod.rs  translate.rs
wix/: main.wxs
