[package]
name = "pipeline-utils-rs"
version = "4.0.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
bio = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
simple_logger = "5.0.0"
anyhow = "1.0.89"
colored = "3.0.0"
nalgebra = "0.33.2"
phf = { version = "0.12.1", features = ["macros"] }
rayon = "1.10.0"
gb-io = "0.9.0"
rust-htslib = { version = "*", default-features = false, features = ["bindgen"] }

oorandom = "11.1.5"
itertools = "0.14.0"
rand = "0.9.2"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
polars = { version = "0.53.0", features = ["lazy", "mode", "strings"] }
velcro = "0.5.4"

[lib]
name = "purs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]
