[package]
name = "pipeline-utils-rs"
description = "A (quasi-random) collection of tools to manipulate biological files (primarily FASTA/MSA files)."
version = "4.3.1"
edition = "2024"
rust-version = "1.93.0"
repository = "https://github.com/HIVDiversity/pipeline-utils-rs"
authors = ["Daniel Le Jeune"]
license-file = "LICENSE"

[package.metadata.wix]
upgrade-guid = "50FB1950-1975-40A8-81E7-E4C9FBE22FDD"
path-guid = "02FA8D62-CF1B-4CF7-95B5-22CA0FD41565"
license = false
eula = false

[dependencies]
bio = "3.0.0"
clap = { version = "4.5.40", features = ["derive"] }
csv = "1.3"
serde_json = "1.0.128"
log = "0.4.22"
simple_logger = "5.0.0"
anyhow = "1.0.89"
colored = "3.0.0"
nalgebra = "0.33.2"
phf = { version = "0.12.1", features = ["macros"] }
gb-io = "0.9.0"
rust-htslib = { version = "*", default-features = false, features = ["bindgen"], optional = true }
oorandom = "11.1.5"
itertools = "0.14.0"
rand = "0.9.2"
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
polars = { version = "0.53.0", features = ["lazy", "mode", "strings"], optional = true }
velcro = "0.5.4"

[lib]
name = "purs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[features]
default = []
trim-sam = ["dep:rust-htslib"]
process-miniprot = ["dep:polars"]
python = ["dep:pyo3"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
